--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ckeditor/ckeditor5-build-classic": "^33.0.0",
     "bootstrap-icons": "^1.7.2",
     "ng-recaptcha": "^9.0.0",
     "rxjs": "~7.4.0",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "~13.3.0",
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/ckeditor__ckeditor5-build-classic": "^29.0.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
